--- a/app/Styles/Quiz.module.css
+++ b/app/Styles/Quiz.module.css
@@ -18,10 +18,18 @@ font-family: cursive;
 }
 
 
+.quizMainSection{
+
+    width: 50vw; 
+    margin: 0 auto; 
+    display: grid;
+    place-content: center; 
+
+}
+
+
 
 .cardContainer{
-
-
 
 
 
@@ -34,7 +42,8 @@ font-family: cursive;
 
     width: 25rem;
     position: relative;
-    background-color: aliceblue;
+    background-color: white; 
+
 
     margin-bottom: 3rem;
     margin-top: 4.85rem; 
@@ -124,6 +133,11 @@ font-family: cursive;
 .answerSectionContainer{
 
 
+    display: grid;  
+    place-content: center; 
+    
+
+
 
 
 
@@ -135,11 +149,11 @@ font-family: cursive;
 .buttonsContainer{
 
 
-    display: grid;
-
-    place-content: center; 
-    grid-template-columns: 1fr 1fr 1fr;
-
+    display: flex; 
+    gap: 5rem; 
+    margin: 0 auto; 
+    outline: 12px solid blue; 
+    
 
 }
 
