--- a/app/globals.css
+++ b/app/globals.css
@@ -1,12 +1,12 @@
 /* @import "tailwindcss"; */
 
 :root {
-  --background: #ffffff;
+  --background: #9091ac;
   --foreground: #171717;
 }
 
 @theme inline {
-  --color-background: var(--background);
+  --color-background: var(--foreground);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
@@ -20,7 +20,7 @@
 }
 
 body {
-  background: var(--background);
+  background: var(--foreground);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
