--- a/app/Styles/Answer.module.css
+++ b/app/Styles/Answer.module.css
@@ -98,10 +98,30 @@
 }
 
 .numSpan{
+    position: absolute;
+    top:0;
+    right: 0;
+    margin-top: -5px;
+    margin-right: -9px; 
 
 
 
+    background-color: red;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
 
+    width: 1.25em;
+    outline: 1.5px solid white; 
+
+
+    height: 1.25em; 
+    display: grid;
+    place-content: center;
+
+    
 
 }
 
