--- a/app/Styles/LongButtons.module.css
+++ b/app/Styles/LongButtons.module.css
@@ -45,13 +45,14 @@
     border-radius: 10px;
     display: grid;
     place-content: center;
-    width: 3rem !important;
-    height: 3rem !important;
+    width: 7rem !important;
+    height: 1rem !important;
     padding: 0 0.1rem;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
+    /* outline: 2px solid lime; */
 }
 
 .buttonStackContainer{
@@ -60,8 +61,8 @@
     position: relative;
     display: grid;
     place-content: center;      
-    height: 3rem; 
-
+    height: 2.5rem; 
+    
 
 }
 
