--- a/app/Styles/Quiz.module.css
+++ b/app/Styles/Quiz.module.css
@@ -13,13 +13,10 @@
 
 
 font-family: cursive;
-
 display: grid;
-
 place-content: center;  
 
-
-
+margin-bottom: 5em;
 
 }
 
@@ -46,18 +43,13 @@ place-content: center;
 
     display: grid;  
     place-content: center; 
-    
-
-
-
-
 
 }
 
 
 
 .card{
-    height: 35rem;
+    height: 38rem;
     width: 25rem;
     position: relative;
     background-color: #fbfbfb;
@@ -68,6 +60,8 @@ place-content: center;
     -moz-border-radius: 1rem;
     -ms-border-radius: 1rem;
     -o-border-radius: 1rem;
+
+    /* outline: 5px solid lime; */
 }
 
 
@@ -99,10 +93,11 @@ place-content: center;
     right: 0; 
     bottom: 0; 
     z-index: 0;
-    /* margin-top: -0.5em;  */
-    height: 29.4rem; 
-    margin-bottom: -5em;
+    height: 38.4rem; 
+    /* margin-bottom: -5em; */
     box-shadow: 0 4px 6px -4px rgba(0, 0, 0, 0.3);
+    /* outline: 4px solid red;  */
+
 
 }
 
@@ -117,7 +112,7 @@ place-content: center;
  bottom: 0; 
  z-index: 0;
  /* margin-top: -0.5em;  */
- height: 29.7rem; 
+ height: 39rem; 
  margin-bottom: -5em;
  box-shadow: 0 4px 6px -4px rgba(0, 0, 0, 0.3);
 
@@ -132,7 +127,7 @@ place-content: center;
     right: 0; 
     bottom: 0; 
     z-index: 0;
-    height: 29rem; 
+    height: 37.9rem; 
     margin-bottom: -5em;
     box-shadow: 0 4px 6px -4px rgba(0, 0, 0, 0.3);
 
@@ -213,11 +208,7 @@ position: relative;
 .doodleContainer{
 
 
-    /* position: absolute;  */
-    bottom: 0%; 
-
-
-
+    /* margin-top: -5em;  */
 
     
 }
