--- a/app/Styles/AudioControls.module.css
+++ b/app/Styles/AudioControls.module.css
@@ -7,7 +7,7 @@
     margin: 2em auto; 
     display: grid; 
     place-content: center;  
-    font-family: cursive;
+    /* font-family: cursive; */
     text-transform: uppercase;
     background: none;
     
