--- a/app/Styles/Results.module.css
+++ b/app/Styles/Results.module.css
@@ -96,7 +96,7 @@
 
 .mainQuizSupportingText {
 
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    /* font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
   
 }
 
