--- a/app/Styles/card.module.css
+++ b/app/Styles/card.module.css
@@ -100,13 +100,13 @@ h1 {
   font-weight: 300;
   font-size: 3rem;
   margin-bottom: 1rem;
-  font-family: 'Cormorant Garamond', serif;
+  /* font-family: 'Cormorant Garamond', serif; */
 }
 
 h2 {
   font-weight: bold;
   font-size: 2.5rem;
-  font-family: 'Cormorant Garamond', serif;
+  /* font-family: 'Cormorant Garamond', serif; */
   margin: 0;
 }
 
