--- a/app/Styles/start.module.css
+++ b/app/Styles/start.module.css
@@ -21,7 +21,7 @@
 color: black;
 
 font-size: clamp(1rem + 1vw, 2rem, 3rem);
-font-family:Arial, Helvetica, sans-serif;
+/* font-family:Arial, Helvetica, sans-serif; */
 
 
 
