--- a/app/globals.css
+++ b/app/globals.css
@@ -28,7 +28,8 @@
 body {
   background: white;
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-chewy), sans-serif
+
 }
 
 
