fixed api route

--- a/app/Styles/LongButtons.module.css
+++ b/app/Styles/LongButtons.module.css
@@ -52,7 +52,6 @@
     -moz-border-radius: 10px;
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
-    /* outline: 2px solid lime; */
 }
 
 .buttonStackContainer{
@@ -76,10 +75,8 @@
     right: 0;
     top: 0;
     bottom: 0;
-    /*outline: 3px solid lime;
-    */height: 100%;
-    /*background-color: blue;
-    */z-index: -1;
+    height: 100%;
+    z-index: -1;
     border-radius: 12px;
     -webkit-border-radius: 12px;
     -moz-border-radius: 12px;
