--- a/app/Styles/Answer.module.css
+++ b/app/Styles/Answer.module.css
@@ -6,19 +6,16 @@
     margin: 0em auto; 
     display: grid; 
     place-content: center;  
-    /* font-family: cursive; */
     text-transform: uppercase;
     background: none;
-    margin-top: -5.5em; 
+    margin-top: -3em; 
     margin-bottom: 5em;
 
 
 }
 
 
-
 .answerSection{
-
 
 
 }
@@ -68,8 +65,8 @@
 
 
 .buttonStack{
-    /*background-color: ;
-    */position: absolute;
+    
+    position: absolute;
     left: 0;
     right: 0;
     top: 0;
