--- a/app/Styles/Results.module.css
+++ b/app/Styles/Results.module.css
@@ -1,11 +1,15 @@
 
 .quizResultsSection {
 
-    height: 95vh; 
+    height: 100vh; 
     width: 80vw; 
     margin: 10vh auto;
     padding: 1vh; 
     position: relative;
+
+    outline: 4px solid lime;
+    margin-top: -1em; 
+
 
 }
 
@@ -113,6 +117,7 @@
     -ms-border-radius: 12px;
     -o-border-radius: 12px;
     color: #000;
+    /* outline: 2px solid red; */
 
 }
 
