Phone & progress bar feature

--- a/app/Styles/Barchart.module.css
+++ b/app/Styles/Barchart.module.css
@@ -20,7 +20,6 @@
 
 
 
-
 }
 
 .mainTitleContainer {
@@ -73,7 +72,7 @@
     width: 70vw;
     background-color: rgb(229, 226, 226);
     /* outline: 6px solid lime; */
-    height: 6em;
+    height: 3.5em;
     position: absolute;
     border-radius:50px ;
     -webkit-border-radius:50px ;
@@ -86,7 +85,7 @@
 }
 
 .progressBar{
-    height: 6em;
+    height: 3.5em;
     width: 60vw;
     /* outline: 3px solid black; */
     position: relative;
@@ -123,13 +122,13 @@
 }
 
 .iconBackground {
-    transform: translate(1em, 0.5rem);
-    -webkit-transform: translate(1em, 0.5rem);
-    -moz-transform: translate(1em, 0.5rem);
-    -ms-transform: translate(1em, 0.5rem);
-    -o-transform: translate(1em, 0.5rem);
-    width: 5em;
-    height: 5em;
+    transform: translate(0.4em, 0.3rem);
+    -webkit-transform: translate(0.4em, 0.3rem);
+    -moz-transform: translate(0.4em, 0.3rem);
+    -ms-transform: translate(0.4em, 0.3rem);
+    -o-transform: translate(0.4em, 0.3rem);
+    width: 2.9em;
+    height: 2.9em;
     background-color: white;
     border-radius:50% ;
     -webkit-border-radius:50% ;
@@ -138,6 +137,9 @@
     -o-border-radius:50% ;
     display: grid;
     place-content: center;
+    position: relative;
+    z-index: 9999;
+
 }
 
 .titleContainer {
@@ -153,22 +155,25 @@
 
 .barTitle{
    right: 0;
-   transform:translate(9em, -2.8em) ;
-   -webkit-transform:translate(9em, -2.8em) ;
-   -moz-transform:translate(9em, -2.8em) ;
-   -ms-transform:translate(9em, -2.8em) ;
-   -o-transform:translate(9em, -2.8em) ;
+   transform:translate(5.5em, -1.70em);
+   -webkit-transform:translate(5.5em, -1.70em);
+   -moz-transform:translate(5.5em, -1.70em);
+   -ms-transform:translate(5.5em, -1.70em);
+   -o-transform:translate(5.5em, -1.70em);
    margin-top: -1em;
-   
-
+   font-size: 1rem;
+   color: white;
 }
 
 .percentageContainer {
-    transform:translate(9.3em, -1.5em);
-    -webkit-transform:translate(9.3em, -1.5em);
-    -moz-transform:translate(9.3em, -1.5em);
-    -ms-transform:translate(9.3em, -1.5em);
-    -o-transform:translate(9.3em, -1.5em);
+    transform:translate(5.65em, -1.35em);
+    -webkit-transform:translate(5.65em, -1.35em);
+    -moz-transform:translate(5.65em, -1.35em);
+    -ms-transform:translate(5.65em, -1.35em);
+    -o-transform:translate(5.65em, -1.35em);
+    color: white;
+    
+
 }
 
 .lineContainer {
@@ -186,11 +191,11 @@
     position: absolute;
     z-index: 999;
     top: 45%;
-    transform:translate(6em, 0) ;
-    -webkit-transform:translate(6em, 0) ;
-    -moz-transform:translate(6em, 0) ;
-    -ms-transform:translate(6em, 0) ;
-    -o-transform:translate(6em, 0) ;
+    transform:translate(2em, -0.3em) ;
+    -webkit-transform:translate(2em, -0.3em) ;
+    -moz-transform:translate(2em, -0.3em) ;
+    -ms-transform:translate(2em, -0.3em) ;
+    -o-transform:translate(2em, -0.3em) ;
 }
 
 .dotContainer {
