--- a/app/Styles/Permission.module.css
+++ b/app/Styles/Permission.module.css
@@ -50,6 +50,8 @@
     -moz-border-radius: 10px;
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
+    cursor: pointer;
+    
 }
 
 .buttonStackContainer{
